--- a/src/main/java/com/picavi/json_rpc_simple_client/view/SimpleRpcClient.fxml
+++ b/src/main/java/com/picavi/json_rpc_simple_client/view/SimpleRpcClient.fxml
@@ -16,11 +16,12 @@
    <children>
       <GridPane layoutX="-149.0" layoutY="-18.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" />
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" />
             <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -74,7 +75,7 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <TextArea fx:id="textAreaResponse" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="1">
+            <TextArea fx:id="textAreaResponse" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
@@ -89,11 +90,21 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextArea>
-            <CheckBox fx:id="checkboxAsync" mnemonicParsing="false" text="async" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <CheckBox fx:id="checkboxAsync" mnemonicParsing="false" text="async" GridPane.columnIndex="5" GridPane.rowIndex="2">
                <GridPane.margin>
-                  <Insets right="10.0" />
+                  <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </CheckBox>
+            <TextField fx:id="textFieldSessionId" editable="false" text="-----" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </TextField>
+            <Label text="Session Id:" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Label>
          </children>
       </GridPane>
    </children>
